tests/TypingSpec/valid/prog/global-var.algst
unit : ()
unit = ()

constUnit : forall a. a -> ()
constUnit [_] _ = unit
