tests/TypingSpec/invalid/types/unbound-typevar.algst
-- `a` may not appear in type contexts.
\(a:Int) -> fst [a]
